feat: build end-to-end prompt evaluation with reusable test suites, evidence-safe metrics, regression release gates, a redesigned workspace, and consolidated tests